c++: zero_init_expr_p of dependent expression [PR95678]

gcc/cp/ChangeLog:

	PR c++/95678
	* tree.c (zero_init_expr_p): Use uses_template_parms instead of
	dependent_type_p.

gcc/testsuite/ChangeLog:

	PR c++/95678
	* g++.dg/cpp0x/dependent3.C: New test.

(cherry picked from commit 9a453da5cac7b6610cd342a7bea256acba5e61e1)